# RAGBOT

./: .gitignore  Cargo.toml  README.md  requirements.txt
frontend/: chatbot.py  streamlit.py
src/: confluence.rs  db_config.rs  main.rs  open_ai_config.rs  qdrant_config.rs
