[package]
name = "RAGBOT"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
reqwest = "0.12.4"
base64 = "0.21.7"
serde_json = "1.0.117"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
